--- a/blog/content/no-more-vercel-lets-serve-nextjs-on-vps.mdx
+++ b/blog/content/no-more-vercel-lets-serve-nextjs-on-vps.mdx
@@ -12,7 +12,7 @@ author: "Your Name"
 > To Create a VPS check this first. [Create Ubuntu VPS on Hetzner](/blog/create-and-setup-ubuntu-vps-on-hetzner)
 
 
-<CalloutWithImage image="https://nhzslwvtivzxkrbsaemj.supabase.co/storage/v1/object/sign/jervi/Pi7compressedScreenshot2025-10-01210207%20(1).png?token=eyJraWQiOiJzdG9yYWdlLXVybC1zaWduaW5nLWtleV9jZWMyNzI1ZS00NzM0LTRjZjYtYmE0NS02NDVkMTU3MTRiYzIiLCJhbGciOiJIUzI1NiJ9.eyJ1cmwiOiJqZXJ2aS9QaTdjb21wcmVzc2VkU2NyZWVuc2hvdDIwMjUtMTAtMDEyMTAyMDcgKDEpLnBuZyIsImlhdCI6MTc1OTM1MDUzMywiZXhwIjoxNzkwODg2NTMzfQ.N6i7SSj2Ai-tbyR5xBQ04X_2fc1VR9yUSahFcLyFmHo" alt="Hetzner VPS">
+<CalloutWithImage image="/images/2025-10-01210207.png" alt="Hetzner VPS">
 
 This guide mirrors what platforms like Vercel do:
 1) fetch your code, 
